Add wallet info endpoint
